Make Website Responsive

--- a/styles/app.css
+++ b/styles/app.css
@@ -24,10 +24,7 @@
     padding-right: 1rem;
     padding-left: 1rem;
 }
-/* Header Top */
 
-.header {
-}
 .header-top {
     display: flex;
     justify-content: space-between;
@@ -60,10 +57,14 @@
     background-color: #0050c8;
     padding: 0.8rem 1.5em;
     color: #fff;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     text-decoration: none;
 }
-
+.header__icon{
+    font-size: 1.8rem;
+    display: none;
+    cursor: pointer;
+}
 /* Header Bottom */
 
 .header-bottom {
@@ -94,13 +95,13 @@
 }
 .header-content__links {
     display: flex;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 }
 .header-content__link {
     background-color: #0050c8;
     padding: 0.8rem 1.5em;
     color: #fff;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     text-decoration: none;
     margin-right: 0.8rem;
     display: block;
@@ -118,133 +119,143 @@
 /* Start Main */
 
 
-
 /* Works Section */
-.main{
+
+.main {
+    padding-top: 3rem;
+}
+
+.works {
+    text-align: center;
     padding: 1rem 0;
 }
-.works{
-    text-align: center;
-}
-.works__text{
+.works__text, .portfolio__text {
     color: #6C7890;
     margin-bottom: 0;
+    text-transform: uppercase;
+    margin-top: 0;
 }
-.works__title{
+
+.works__title, .portfolio__title {
     color: #081D43;
     margin-top: 0.8rem;
     font-family: 'TTNorms Medium';
     font-weight: normal;
+    font-size: 1.8rem;
 }
-.works-content{
+.works-content {
     margin-top: 3rem;
     margin-bottom: 3rem;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
-.works-content__title{
+.works-content__item{
+    flex-basis: 16rem;
+    flex-shrink: 0;
+}
+.works-content__title {
     color: #081D43;
 }
-.works-content__text{
+.works-content__text {
     color: #6C7890;
     line-height: 2rem;
     max-width: 16rem;
 }
-.works-img{
+.works-img {
     max-width: 31rem;
     margin: 0 auto;
 }
-.works-img__img{
+.works-img__img {
     width: 100%;
 }
 
 /* Person-Comments Section */
 
-
-
-
-.person-comments{
+.person-comments {
     background-color: #2F5BEA;
     color: #fff;
     text-align: center;
-    padding: 2rem 0;
+    padding: 5rem 0;
 }
-.person-comments__title{
+
+.person-comments__title {
     font-family: "TTNorms Medium";
     font-weight: normal;
+    margin-top: 0;
+    font-size: 1.8rem;
 }
-.person-comments__text{
-    font-family: "TTNorms Light";
 
+.person-comments__text {
+    font-family: "TTNorms Light";
+    max-width: 28rem;
+    margin: 0 auto;
+    line-height: 1.8rem;
 }
-.comments-container{
+.comments-container {
     max-width: 65rem;
     margin: 3.5rem auto 0 auto;
 
 }
-.comments{
+.comments {
     display: flex;
     justify-content: space-between;
 }
-.comment{
+.comment {
     background-color: #fff;
     margin: 1rem;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 18rem;
     flex-basis: 20rem;
-    
+
 }
-.comment__content{
+.comment__content {
     text-align: left;
     padding: 1.2rem;
 }
-.comment__body{
+.comment__body {
     font-family: 'Times Roman Italic';
     color: #7E8085;
     line-height: 1.5rem;
     margin: 0;
 }
-.comment__info{
+.comment__info {
     display: flex;
     border-top: 1px solid #E8EBEF;
     padding: 0.8rem 1.2rem;
     align-items: center;
 }
-.comment__img{
-
-}
-.comment__person{
+.comment__person {
     color: #000000;
     margin: 0 0 0 0.5rem;
 }
-
-.companies{
+.companies {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 5rem;
+    flex-wrap: wrap;
 }
-.companies__img{
+.companies__img {
     display: block;
     margin: 1rem;
 }
-
-.copy-right{
+/* Start Footer */
+.copy-right {
     color: #6C7890;
     padding: 1rem 0;
 }
-.copy-right__wrapper{
+.copy-right__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-
 /* Project Responsive */
-
 @media only screen and (max-width: 1200px) {
     .container {
         max-width: 960px;
@@ -255,16 +266,90 @@
     .container {
         max-width: 720px;
     }
+    .header__link{
+        display: none;
+    }
+    .header-content {
+        flex-direction: column-reverse;
+    }
+    .header-bottom {
+        margin-top: 3rem;
+    }
+    .header-content__wrapper{
+        max-width: 100%;
+    }
+    .header-content__right{
+        margin-bottom: 2rem;
+    }
+    .header-content__links{
+        flex-wrap: wrap;
+        align-items: flex-start;
+    }
+    .header-content__link{
+        margin-bottom: 1rem;
+    }
+    .comments{
+        flex-wrap: wrap;
+
+    }
+    .comment{
+        flex-basis: 19rem;
+    }
+    .companies{
+        justify-content: center;
+        margin-top: 2.5rem;
+    }
+    
 }
 
 @media only screen and (max-width: 768px) {
     .container {
         max-width: 540px;
     }
+    .header__icon{
+        display: block;
+    }
+    .menu {
+        position: fixed;
+        top: 0;
+        left: -288px;
+        bottom: 0;
+        background: #3f70e1;
+        width: 16rem;
+        flex-direction: column;
+        padding: 2rem 1rem;
+        transition: 0.3s all;
+    }
+    .menu__item{
+        margin-bottom: 2rem;
+        font-size: 1.2rem;
+    }
+    .menu__link{
+        color: #fff;
+    }
+    .works-content__item{
+        flex-basis: 14rem;
+    }
+    .works-content__item{
+        margin-bottom: 1.5rem;
+    }
+    .comment{
+        margin: 0 0 1.5rem 0;
+        flex-basis: 15rem;
+    }
 }
 
 @media only screen and (max-width: 576px) {
     .container {
         max-width: 100%;
+    }
+    .works-content__item{
+        flex-basis: 100%;
+    }
+    .works-content__text{
+        max-width: 100%;
+    }
+    .comment{
+        flex-basis: 100%;
     }
 }
